--- a/album.html
+++ b/album.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiago Silva - Álbum de Fotos</title>
     <style>
-        /* Estilos gerais (iguais para todas as páginas) */
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f0f4f8; color: #000000; }
         .container { max-width: 1000px; margin: auto; overflow: hidden; padding: 0 20px; }
         header { background: #000080; color: #fff; padding: 1rem 20px; text-align: center; display: flex; justify-content: space-between; align-items: center; }
@@ -21,61 +20,13 @@
         .section { background: #fff; padding: 20px; margin-top: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
         h2 { border-bottom: 2px solid #000080; padding-bottom: 10px; color: #000080; }
         footer { text-align: center; padding: 20px; background: #000080; color: #fff; margin-top: 20px; }
-        
-        /* Estilos da Galeria */
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 15px;
-        }
-        .gallery-item {
-            border-radius: 8px;
-            overflow: hidden; /* Garante que a imagem não ultrapasse a borda */
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        .gallery-item img {
-            width: 100%;
-            height: 100%;
-            aspect-ratio: 16 / 9; /* Proporção 16:9 */
-            object-fit: cover; /* Cobre todo o espaço, cortando se necessário */
-            object-position: top center; /* Garante que o corte seja feito por baixo, preservando o topo */
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-        .gallery-item img:hover {
-            transform: scale(1.05); /* Efeito de zoom suave */
-        }
-
-        /* Estilos do Modal (imagem maximizada) */
-        .modal {
-            display: none; /* Escondido por padrão */
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0,0,0,0.9);
-            justify-content: center;
-            align-items: center;
-        }
-        .modal-content {
-            margin: auto;
-            display: block;
-            max-width: 80%;
-            max-height: 80%;
-        }
-        .close-modal {
-            position: absolute;
-            top: 20px;
-            right: 35px;
-            color: #fff;
-            font-size: 40px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-        /* Responsividade */
+        .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; }
+        .gallery-item { border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
+        .gallery-item img { width: 100%; height: 100%; aspect-ratio: 16 / 9; object-fit: cover; object-position: top center; cursor: pointer; transition: transform 0.3s ease; }
+        .gallery-item img:hover { transform: scale(1.05); }
+        .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.9); justify-content: center; align-items: center; }
+        .modal-content { margin: auto; display: block; max-width: 80%; max-height: 80%; }
+        .close-modal { position: absolute; top: 20px; right: 35px; color: #fff; font-size: 40px; font-weight: bold; cursor: pointer; }
         @media (max-width: 768px) {
             header { flex-direction: column; gap: 15px; }
             header h1 { font-size: 1.2em; order: 1; }
@@ -85,7 +36,6 @@
     </style>
 </head>
 <body>
-
     <header>
         <div class="logo-left-container">
             <img src="aabb.jpg" alt="Logo AABB" class="logo-left">
@@ -94,7 +44,6 @@
         <h1>Thiago Silva - Talento do Tênis de Mesa</h1>
         <img src="thiagologo.jpg" alt="Logo Thiago Silva" class="logo-right">
     </header>
-
     <nav>
         <a href="index.html">Apresentação</a>
         <a href="atleta.html">Atleta</a>
@@ -102,7 +51,6 @@
         <a href="projeto.html">Projeto</a>
         <a href="lei.html">Lei de Incentivo</a>
     </nav>
-
     <div class="container main">
         <div class="section">
             <h2>Álbum de Fotos</h2>
@@ -116,46 +64,33 @@
             </div>
         </div>
     </div>
-    
     <div id="myModal" class="modal">
         <span class="close-modal">&times;</span>
         <img class="modal-content" id="imgModal">
     </div>
-
     <footer>
         <p>Contato: Marcos Dias 71-98867-6473 </p>
         <p>marcos.dias.g@gmail.com </p>
     </footer>
-
     <script>
-        // Pega o modal
         var modal = document.getElementById("myModal");
         var modalImg = document.getElementById("imgModal");
         var galleryImages = document.querySelectorAll(".gallery-item img");
-
-        // Adiciona o evento de clique para cada imagem da galeria
         galleryImages.forEach(function(img) {
             img.onclick = function() {
                 modal.style.display = "flex";
                 modalImg.src = this.src;
             }
         });
-
-        // Pega o elemento <span> que fecha o modal
         var span = document.getElementsByClassName("close-modal")[0];
-
-        // Quando o usuário clicar no (x), fecha o modal
         span.onclick = function() {
             modal.style.display = "none";
         }
-
-        // Fecha o modal se o usuário clicar fora da imagem
         window.onclick = function(event) {
             if (event.target == modal) {
                 modal.style.display = "none";
             }
         }
     </script>
-
 </body>
 </html>
