--- a/atleta.html
+++ b/atleta.html
@@ -7,7 +7,7 @@
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f0f4f8; color: #000000; }
         .container { max-width: 1000px; margin: auto; overflow: hidden; padding: 0 20px; }
-        header { background: #000080; color: #fff; padding: 1rem 20px; text-align: center; display: flex; justify-content: space-between; align-items: center; }
+        header { background: #000080; color: #fff; padding: 1rem 20px; text-align: center; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
         .logo-left-container { display: flex; align-items: center; gap: 15px; }
         .logo-left { height: 50px; border-radius: 5px; }
         .athlete-text { color: #FFC107; font-size: 1.2em; }
