--- a/album.html
+++ b/album.html
@@ -7,7 +7,7 @@
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f0f4f8; color: #000000; }
         .container { max-width: 1000px; margin: auto; overflow: hidden; padding: 0 20px; }
-        header { background: #000080; color: #fff; padding: 1rem 20px; text-align: center; display: flex; justify-content: space-between; align-items: center; }
+        header { background: #000080; color: #fff; padding: 1rem 20px; text-align: center; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
         .logo-left-container { display: flex; align-items: center; gap: 15px; }
         .logo-left { height: 50px; border-radius: 5px; }
         .athlete-text { color: #FFC107; font-size: 1.2em; }
@@ -17,12 +17,10 @@
         nav a { color: #fff; text-decoration: none; padding: 0.5rem 1rem; transition: background-color 0.3s; }
         nav a:hover { background-color: #FFC107; color: #000080; border-radius: 5px; }
         .main { padding: 20px 0; }
-        .section { background: #fff; padding: 20px; margin-top: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        h2 { border-bottom: 2px solid #000080; padding-bottom: 10px; color: #000080; }
         footer { text-align: center; padding: 20px; background: #000080; color: #fff; margin-top: 20px; }
-        .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; }
-        .gallery-item { border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-        .gallery-item img { width: 100%; height: 100%; aspect-ratio: 16 / 9; object-fit: cover; object-position: top center; cursor: pointer; transition: transform 0.3s ease; }
+        .gallery-title { text-align: center; color: #000080; margin-top: 20px; border-bottom: 2px solid #000080; padding-bottom: 10px; }
+        .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; margin-top: 20px; }
+        .gallery-item img { width: 100%; height: 100%; aspect-ratio: 16 / 9; object-fit: cover; object-position: top center; cursor: pointer; transition: transform 0.3s ease; border-radius: 8px; }
         .gallery-item img:hover { transform: scale(1.05); }
         .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.9); justify-content: center; align-items: center; }
         .modal-content { margin: auto; display: block; max-width: 80%; max-height: 80%; }
@@ -52,16 +50,20 @@
         <a href="lei.html">Lei de Incentivo</a>
     </nav>
     <div class="container main">
-        <div class="section">
-            <h2>Álbum de Fotos</h2>
-            <div class="gallery">
-                <div class="gallery-item"><img src="foto1.jpg" alt="Descrição da foto 1"></div>
-                <div class="gallery-item"><img src="foto2.jpg" alt="Descrição da foto 2"></div>
-                <div class="gallery-item"><img src="foto3.jpg" alt="Descrição da foto 3"></div>
-                <div class="gallery-item"><img src="foto4.jpg" alt="Descrição da foto 4"></div>
-                <div class="gallery-item"><img src="foto5.jpg" alt="Descrição da foto 5"></div>
-                <div class="gallery-item"><img src="foto6.jpg" alt="Descrição da foto 6"></div>
-            </div>
+        <h2 class="gallery-title">Momentos da Trajetória</h2>
+        <div class="gallery">
+            <div class="gallery-item"><img src="thiago01.jpg" alt="Thiago Silva em ação 1"></div>
+            <div class="gallery-item"><img src="thiago02.jpg" alt="Thiago Silva em ação 2"></div>
+            <div class="gallery-item"><img src="thiago03.jpg" alt="Thiago Silva em ação 3"></div>
+            <div class="gallery-item"><img src="thiago04.jpg" alt="Thiago Silva em ação 4"></div>
+            <div class="gallery-item"><img src="thiago05.jpg" alt="Thiago Silva em pódio"></div>
+            <div class="gallery-item"><img src="thiago06.jpg" alt="Thiago Silva com medalhas"></div>
+            <div class="gallery-item"><img src="thiago07.jpg" alt="Thiago Silva em treino"></div>
+            <div class="gallery-item"><img src="thiago08.jpg" alt="Thiago Silva em competição"></div>
+            <div class="gallery-item"><img src="thiago09.jpg" alt="Thiago Silva recebendo prêmio"></div>
+            <div class="gallery-item"><img src="thiago10.jpg" alt="Equipe reunida"></div>
+            <div class="gallery-item"><img src="thiago11.jpg" alt="Foto com técnico"></div>
+            <div class="gallery-item"><img src="thiago12.jpg" alt="Detalhe do equipamento"></div>
         </div>
     </div>
     <div id="myModal" class="modal">
