--- a/projeto.html
+++ b/projeto.html
@@ -7,7 +7,7 @@
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f0f4f8; color: #000000; }
         .container { max-width: 1000px; margin: auto; overflow: hidden; padding: 0 20px; }
-        header { background: #000080; color: #fff; padding: 1rem 20px; text-align: center; display: flex; justify-content: space-between; align-items: center; }
+        header { background: #000080; color: #fff; padding: 1rem 20px; text-align: center; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
         .logo-left-container { display: flex; align-items: center; gap: 15px; }
         .logo-left { height: 50px; border-radius: 5px; }
         .athlete-text { color: #FFC107; font-size: 1.2em; }
@@ -18,8 +18,14 @@
         nav a:hover { background-color: #FFC107; color: #000080; border-radius: 5px; }
         .main { padding: 20px 0; }
         .section { background: #fff; padding: 20px; margin-top: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        h2 { border-bottom: 2px solid #000080; padding-bottom: 10px; color: #000080; }
+        h1.page-title, h2 { border-bottom: 2px solid #000080; padding-bottom: 10px; color: #000080; }
         footer { text-align: center; padding: 20px; background: #000080; color: #fff; margin-top: 20px; }
+        ul { padding-left: 20px; }
+        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+        th, td { padding: 12px; text-align: left; border-bottom: 1px solid #ddd; }
+        th { background-color: #f2f2f2; color: #333; }
+        tr:hover { background-color: #f5f5f5; }
+        .total-row td { font-weight: bold; background-color: #fff9c4; color: #000080; }
         @media (max-width: 768px) {
             header { flex-direction: column; gap: 15px; }
             header h1 { font-size: 1.2em; order: 1; }
@@ -46,10 +52,53 @@
     </nav>
     <div class="container main">
         <div class="section">
-            <h2>O Projeto</h2>
-            <p><strong>Insira aqui as informações detalhadas sobre o projeto.</strong></p>
-            <p>Você pode falar sobre os objetivos do projeto, a metodologia de treinamento, os custos envolvidos, o cronograma e como os apoiadores podem contribuir.</p>
-            <p>Este espaço é totalmente customizável para atender às suas necessidades.</p>
+            <h1 class="page-title">Detalhes do Projeto</h1>
+            <p><strong>Nome:</strong> Desenvolvimento Esportivo de Thiago Silva - Tênis de Mesa</p>
+            <p><strong>Modalidade:</strong> Tênis de Mesa</p>
+            <p><strong>Categoria:</strong> Atleta Individual - 1º lugar no Ranking Estadual SUB-13</p>
+            <p><strong>Período de Execução:</strong> 12 meses (Janeiro a Dezembro de 2026)</p>
+            <p><strong>Valor Solicitado:</strong> R$ 40.000,00</p>
+        </div>
+        <div class="section">
+            <h2>Justificativa</h2>
+            <p>Este projeto visa oferecer a Thiago a estrutura necessária para seu pleno desenvolvimento como atleta de alto rendimento. O investimento é essencial para cobrir custos com treinos contínuos em academia especializada, participação em competições, acompanhamento profissional e aquisição de materiais, permitindo que ele continue evoluindo e representando a Bahia em cenários nacional e internacional.</p>
+        </div>
+        <div class="section">
+            <h2>Objetivos</h2>
+            <p><strong>Geral:</strong> Consolidar Thiago Silva como uma referência do tênis de mesa nacional, promovendo seu desenvolvimento esportivo, físico e social.</p>
+            <p><strong>Específicos:</strong></p>
+            <ul>
+                <li>Participar de, no mínimo, 12 competições oficiais.</li>
+                <li>Manter a liderança no ranking estadual SUB-13 e alcançar o top 10 nacional SUB-15.</li>
+                <li>Realizar 5 treinos técnicos semanais em academia especializada.</li>
+                <li>Garantir suporte nutricional e médico para otimizar a performance.</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Orçamento Detalhado (12 meses)</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Categoria</th>
+                        <th>Valor Total (R$)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>Bolsa Atleta</td><td>14.400,00</td></tr>
+                    <tr><td>Técnico</td><td>4.000,00</td></tr>
+                    <tr><td>Gestor</td><td>2.000,00</td></tr>
+                    <tr><td>Inscrição - Evento Nacional</td><td>500,00</td></tr>
+                    <tr><td>Viagem</td><td>2.500,00</td></tr>
+                    <tr><td>Hospedagem</td><td>1.440,00</td></tr>
+                    <tr><td>Equipamentos e Materiais</td><td>4.900,00</td></tr>
+                    <tr><td>Uniforme</td><td>1.000,00</td></tr>
+                    <tr><td>Tênis</td><td>800,00</td></tr>
+                    <tr><td>Academia (R$ 600 x 12)</td><td>7.200,00</td></tr>
+                    <tr><td>Suplementos (R$ 85 x 12)</td><td>1.020,00</td></tr>
+                    <tr><td>Consultas Médicas</td><td>240,00</td></tr>
+                    <tr class="total-row"><td>Total</td><td>R$ 40.000,00</td></tr>
+                </tbody>
+            </table>
         </div>
     </div>
     <footer>
